--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </header>
 
   <section class="hero">
-    <div class="badge">Founding Alliance</div>
+    <div class="badge">Founding Teachers Alliance</div>
     <h1>African teachers leading<br>the AI revolution</h1>
     <p class="lead">
       A teacher-led, mobile-first movement — built by African teachers, for African teachers. 
@@ -198,7 +198,7 @@
     <div class="motto">Teach Smart, Lead Change</div>
     
     <div class="cta-group">
-      <a href="YOUR_ALLIANCE_FORM_LINK" class="btn btn-primary">Join Alliance — 60s</a>
+      <a href="Alliance-form.html" class="btn btn-primary">Join Alliance — 60s</a>
       <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights — 2 min</a>
     </div>
 
