--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
   </header>
 
   <section class="hero">
-    <div class="badge">Founding Teachers Alliance</div>
+    <div class="badge">Join The Founding Teacher Alliance</div>
     <h1>African teachers leading<br>the AI revolution</h1>
     <p class="lead">
-      A teacher-led, mobile-first movement — built by African teachers, for African teachers. 
-      We co-create curriculum, tools and policy-aligned resources that keep African knowledge at the centre.
+      Africa's first, teacher-led, mobile-first AI curriculum — built by African teachers, for African teachers. 
+      We are co-creating the curriculum, tools and policy-aligned resources that keep African knowledge at the centre.
     </p>
     <div class="motto">Teach Smart, Lead Change</div>
     
