--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
     <div class="badge">Join The Founding Teacher Alliance</div>
     <h1>African teachers leading<br>the AI revolution</h1>
     <p class="lead">
-      Africa's first, teacher-led, mobile-first AI curriculum — built by African teachers, for African teachers. 
+      Africa's First, Teacher-led, Mobile-first AI Training — built by African teachers, for African teachers. 
       We are co-creating the curriculum, tools and policy-aligned resources that keep African knowledge at the centre.
     </p>
     <div class="motto">Teach Smart, Lead Change</div>
     
     <div class="cta-group">
-      <a href="Alliance-form.html" class="btn btn-primary">Join Alliance — 60s</a>
-      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights — 2 min</a>
+      <a href="Alliance-form.html" class="btn btn-primary">Join The Teacher Alliance — 60s</a>
+      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Your Journey — 2 min</a>
     </div>
 
     <div class="stats">
@@ -260,7 +260,7 @@
   </section>
 
   <section class="final-cta">
-    <h2>Join the founding alliance</h2>
+    <h2>Join the Founding alliance</h2>
     <p>
       We invite the first 10,000 teachers to co-create the curriculum and define how AI is used in African classrooms.
     </p>
