--- a/index.html
+++ b/index.html
@@ -31,14 +31,21 @@
       max-width:1280px;margin:0 auto;padding:0 20px;
     }
     header{
-      padding:24px 0;text-align:center;
+      padding:32px 0;text-align:center;
+      position: sticky;
+      top: 0;
+      background: var(--bg);
+      z-index: 1000;
+      transition: all 0.4s cubic-bezier(0.16,1,0.3,1);
     }
+    /* Larger, more prominent logo */
     .logo{
-      height:68px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.1));
+      height: 140px;               /* ← Much larger */
+      filter:drop-shadow(0 4px 12px rgba(0,0,0,0.1));
       transition:var(--transition);
     }
     .logo:hover{transform:scale(1.05);}
-    
+
     /* HERO */
     .hero{
       padding:100px 0 140px;text-align:center;
@@ -68,7 +75,7 @@
       margin:40px 0 48px;display:block;
     }
     .cta-group{
-      display:flex;gap:16px;flex-wrap:wrap;justify-content:center;
+      display:flex;gap:16px;gap:16px;flex-wrap:wrap;justify-content:center;
     }
     .btn{
       padding:18px 36px;border-radius:999px;font-weight:700;
@@ -177,6 +184,7 @@
       .card{padding:40px 28px;}
       .final-cta{padding:90px 28px;}
       .final-cta h2{font-size:3rem;}
+      .logo { height: 110px; } /* still big on mobile */
     }
   </style>
 </head>
@@ -192,14 +200,14 @@
     <div class="badge">Join The Founding Teacher Alliance</div>
     <h1>African teachers leading<br>the AI revolution</h1>
     <p class="lead">
-      Africa's First, Teacher-led, Mobile-first AI Training — built by African teachers, for African teachers. 
+      Africa's first, teacher-led, mobile-first AI curriculum — built by African teachers, for African teachers. 
       We are co-creating the curriculum, tools and policy-aligned resources that keep African knowledge at the centre.
     </p>
     <div class="motto">Teach Smart, Lead Change</div>
     
     <div class="cta-group">
-      <a href="Alliance-form.html" class="btn btn-primary">Join The Teacher Alliance — 60s</a>
-      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Your Journey — 2 min</a>
+      <a href="Alliance-form.html" class="btn btn-primary">Join Alliance — 60s</a>
+      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights — 2 min</a>
     </div>
 
     <div class="stats">
@@ -260,7 +268,7 @@
   </section>
 
   <section class="final-cta">
-    <h2>Join the Founding alliance</h2>
+    <h2>Join the founding alliance</h2>
     <p>
       We invite the first 10,000 teachers to co-create the curriculum and define how AI is used in African classrooms.
     </p>
