--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
 
   <section class="hero">
     <div class="badge">Join The Founding Teacher Alliance</div>
-    <h1>African teachers leading<br>the AI revolution</h1>
+    <h1>African Teachers Leading<br>the AI Revolution</h1>
 
     <!-- New section -->
     <div style="font-size:1.4rem;font-weight:700;color:#1e293b;margin-bottom:32px;">
-      What we will create together
+      What We Will Create Together:
     </div>
     <ul class="promise-list">
-      <li><strong>Africa’s first teacher-co-created AI curriculum</strong> — with our stories, languages and wisdom at its heart</li>
-      <li><strong>Mobile-first tools</strong> that work on any phone, even low-bandwidth</li>
+      <li><strong>Africa’s First Teacher-co-created AI Training</strong> — with our stories, languages and wisdom at its heart</li>
+      <li><strong>Mobile-first insight-driven tools</strong> that work on any phone, even low-bandwidth</li>
       <li><strong>Policy-ready resources</strong> already aligned with UNESCO & AU standards</li>
       <li><strong>Your voice in global conversations</strong> — shaping how AI enters African classrooms forever</li>
     </ul>
@@ -161,17 +161,17 @@
     <div class="motto">Teach Smart, Lead Change</div>
     
     <div class="cta-group">
-      <a href="Alliance-form.html" class="btn btn-primary">Join Alliance — 60s</a>
-      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share Insights — 2 min</a>
+      <a href="Alliance-form.html" class="btn btn-primary">Join The Alliance — 60sec</a>
+      <a href="YOUR_INSIGHTS_FORM_LINK" class="btn btn-secondary">Share your Journey — 2 min</a>
     </div>
 
     <div class="stats">
       <div class="stat">
         <div class="stat-value" id="counter">1,247</div>
-        <div class="stat-label">Founding teachers</div>
+        <div class="stat-label">Founding teachers so far across the continent</div>
       </div>
       <div class="stat">
-        <div class="stat-value">38</div>
+        <div class="stat-value">54</div>
         <div class="stat-label">African countries</div>
       </div>
       <div class="stat">
@@ -196,7 +196,7 @@
   </section>
 
   <section>
-    <h2 class="section-title">The solution — led by teachers</h2>
+    <h2 class="section-title">The Solution — Led By Teachers</h2>
     <div class="cards">
       <div class="card">
         <ul class="list">
@@ -210,7 +210,7 @@
   </section>
 
   <section>
-    <h2 class="section-title">What founding teachers gain</h2>
+    <h2 class="section-title">What Founding Teachers Gain</h2>
     <div class="cards">
       <div class="card">
         <ul class="list">
@@ -224,7 +224,7 @@
   </section>
 
   <section class="final-cta">
-    <h2>Join the founding alliance</h2>
+    <h2>Join The Founding Teacher Alliance</h2>
     <p>
       We invite the first 10,000 teachers to co-create the curriculum and 
       define how AI is used in African classrooms.
