--- a/alliance-form.html
+++ b/alliance-form.html
@@ -19,8 +19,8 @@
     input:focus,textarea:focus{outline:none;background:rgba(255,255,255,0.25);box-shadow:0 0 0 4px rgba(255,215,0,0.3);}
     .btn-next{display:block;width:100%;padding:18px;background:#ffd700;color:#0f0f23;font-weight:700;font-size:1.2rem;border-radius:999px;border:none;margin-top:32px;cursor:pointer;transition:all .4s;box-shadow:0 12px 30px rgba(255,215,0,0.4);}
     .btn-next:hover{transform:translateY(-4px);box-shadow:0 20px 50px rgba(255,215,0,0.5);}
-    .logo{margin-bottom:32px;text-align:center;}
-    .logo img{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.4));}
+    .logo{margin-bottom:32px;text-align:center;background:#f5f5dc;padding:24px;border-radius:20px;}
+    .logo img{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.15));}
     .thankyou{text-align:center;padding:60px 20px;}
     .thankyou h2{font-size:2.8rem;margin-bottom:24px;}
     .thankyou p{font-size:1.3rem;color:#e2e8f0;line-height:1.7;}
@@ -35,8 +35,8 @@
   <!-- STEP 1 -->
   <div class="step active" data-step="1">
     <h1>Welcome, Teacher!</h1>
-    <p>You’re one of the first 10,000 joining The Founding Teacher Alliance. Ready?</p>
-    <button class="btn-next" onclick="nextStep()">Yes — Let’s begin</button>
+    <p>You're one of the first 10,000 joining The Founding Teacher Alliance. Ready?</p>
+    <button class="btn-next" onclick="goToNextStep()">Yes — Let's begin</button>
   </div>
 
   <!-- STEP 2 -->
@@ -66,7 +66,7 @@
   <!-- STEP 5 -->
   <div class="step" data-step="5">
     <h1>One sentence:</h1>
-    <p>What’s the biggest challenge you face using technology in your classroom today?</p>
+    <p>What's the biggest challenge you face using technology in your classroom today?</p>
     <textarea id="challenge" rows="4" placeholder="Type your honest answer…" required></textarea>
     <button class="btn-next" onclick="nextStep()">Continue →</button>
   </div>
@@ -82,9 +82,9 @@
   <!-- STEP 7 -->
   <div class="step" data-step="7">
     <div class="thankyou">
-      <h2>You’re in! 🎉</h2>
+      <h2>You're in! 🎉</h2>
       <p>Welcome to <strong>The Founding Teacher Alliance</strong>.<br>Your voice will shape the future of AI in African education.</p>
-      <p style="margin-top:32px;font-size:1.1rem;">You’ll receive a welcome message on WhatsApp within 24 hours.</p>
+      <p style="margin-top:32px;font-size:1.1rem;">You'll receive a welcome message on WhatsApp within 24 hours.</p>
       <div style="margin-top:48px;font-size:2.5rem;">Teach Smart, Lead Change, Celebrate</div>
     </div>
   </div>
@@ -94,6 +94,17 @@
   const steps = document.querySelectorAll('.step');
   const progress = document.getElementById('progress');
   let current = 0;
+
+  // Special function for the first step (no validation needed)
+  function goToNextStep() {
+    steps[current].classList.remove('active');
+    current++;
+    steps[current].classList.add('active');
+    progress.style.width = (current / (steps.length - 1)) * 100 + '%';
+
+    const nextInput = steps[current].querySelector('input, textarea');
+    if (nextInput) setTimeout(() => nextInput.focus(), 400);
+  }
 
   function nextStep() {
     const currentStep = steps[current];
@@ -105,6 +116,9 @@
       return;
     }
 
+    // Reset border
+    if (input) input.style.border = 'none';
+
     currentStep.classList.remove('active');
     current++;
     steps[current].classList.add('active');
@@ -115,6 +129,15 @@
   }
 
   function submitForm() {
+    const currentStep = steps[current];
+    const input = currentStep.querySelector('input');
+
+    if (input && input.hasAttribute('required') && !input.value.trim()) {
+      input.style.border = '2px solid #ff6b35';
+      input.focus();
+      return;
+    }
+
     // Collect values
     const data = {
       name: document.getElementById('name').value.trim(),
@@ -141,4 +164,19 @@
     const isTextarea = activeStep.querySelector('textarea');
     if (e.key === 'Enter' && !e.shiftKey && !isTextarea) {
       e.preventDefault();
-      if (current < steps.length - 2) {
+      if (current === 0) {
+        goToNextStep();
+      } else if (current < steps.length - 2) {
+        const isLastInputStep = current === steps.length - 3;
+        if (isLastInputStep) {
+          submitForm();
+        } else {
+          nextStep();
+        }
+      }
+    }
+  });
+</script>
+
+</body>
+</html>
