--- a/alliance-form.html
+++ b/alliance-form.html
@@ -8,10 +8,10 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box;}
     body{font-family:'Inter',sans-serif;background:#0f0f23;color:#fff;display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;background:radial-gradient(circle at top,#1e293b 0%,#0f0f23 70%);}
-    .form-container{max-width:480px;width:100%;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:32px;padding:48px 32px;box-shadow:0 30px 80px rgba(0,0,0,0.6);border:1px solid rgba(255,215,0,0.3);position:relative;overflow:hidden;}
+    .form-container{max-width:480px;width:100%;background:rgba(255,255,255,0.08);backdrop-filter:blur(20px);border-radius:32px;padding:48px 32px;box-shadow:0 30px 80px rgba(0,0,0,0.6);border:1px solid rgba(255,215,0,0.3);position:relative;overflow:hidden;min-height:500px;}
     .progress{position:absolute;top:0;left:0;height:6px;background:#ffd700;transition:width .6s cubic-bezier(0.16,1,0.3,1);z-index:10;width:0%;}
-    .step{opacity:0;transform:translateY(20px);transition:all .6s cubic-bezier(0.16,1,0.3,1);position:absolute;inset:0;padding:0 32px;display:flex;flex-direction:column;justify-content:center;}
-    .step.active{opacity:1;transform:translateY(0);position:relative;}
+    .step{opacity:0;transform:translateY(20px);transition:all .6s cubic-bezier(0.16,1,0.3,1);display:none;flex-direction:column;justify-content:center;padding:0;}
+    .step.active{opacity:1;transform:translateY(0);display:flex;}
     h1{font-size:2.6rem;font-weight:900;text-align:center;margin-bottom:16px;background:linear-gradient(135deg,#ffd700,#ff6b35);-webkit-background-clip:text;-webkit-text-fill-color:transparent;}
     p{text-align:center;color:#e2e8f0;font-size:1.1rem;line-height:1.6;margin-bottom:32px;}
     input,textarea{width:100%;padding:18px 20px;border-radius:20px;border:none;background:rgba(255,255,255,0.15);color:#fff;font-size:1.1rem;transition:all .3s;}
@@ -19,6 +19,7 @@
     input:focus,textarea:focus{outline:none;background:rgba(255,255,255,0.25);box-shadow:0 0 0 4px rgba(255,215,0,0.3);}
     .btn-next{display:block;width:100%;padding:18px;background:#ffd700;color:#0f0f23;font-weight:700;font-size:1.2rem;border-radius:999px;border:none;margin-top:32px;cursor:pointer;transition:all .4s;box-shadow:0 12px 30px rgba(255,215,0,0.4);}
     .btn-next:hover{transform:translateY(-4px);box-shadow:0 20px 50px rgba(255,215,0,0.5);}
+    .btn-next:active{transform:translateY(-2px);}
     .logo{margin-bottom:32px;text-align:center;background:#f5f5dc;padding:24px;border-radius:20px;}
     .logo img{height:72px;filter:drop-shadow(0 4px 12px rgba(0,0,0,0.15));}
     .thankyou{text-align:center;padding:60px 20px;}
@@ -36,7 +37,7 @@
   <div class="step active" data-step="1">
     <h1>Welcome, Teacher!</h1>
     <p>You're one of the first 10,000 joining The Founding Teacher Alliance. Ready?</p>
-    <button class="btn-next" onclick="goToNextStep()">Yes — Let's begin</button>
+    <button class="btn-next" onclick="startForm()">Yes — Let's begin</button>
   </div>
 
   <!-- STEP 2 -->
@@ -95,18 +96,24 @@
   const progress = document.getElementById('progress');
   let current = 0;
 
-  // Special function for the first step (no validation needed)
-  function goToNextStep() {
+  console.log('Script loaded, total steps:', steps.length);
+
+  // Function specifically for starting the form (step 1)
+  function startForm() {
+    console.log('Start button clicked!');
     steps[current].classList.remove('active');
     current++;
     steps[current].classList.add('active');
     progress.style.width = (current / (steps.length - 1)) * 100 + '%';
-
+    
     const nextInput = steps[current].querySelector('input, textarea');
-    if (nextInput) setTimeout(() => nextInput.focus(), 400);
+    if (nextInput) {
+      setTimeout(() => nextInput.focus(), 400);
+    }
   }
 
   function nextStep() {
+    console.log('Next step called, current:', current);
     const currentStep = steps[current];
     const input = currentStep.querySelector('input, textarea');
 
@@ -125,10 +132,13 @@
     progress.style.width = (current / (steps.length - 1)) * 100 + '%';
 
     const nextInput = steps[current].querySelector('input, textarea');
-    if (nextInput) setTimeout(() => nextInput.focus(), 400);
+    if (nextInput) {
+      setTimeout(() => nextInput.focus(), 400);
+    }
   }
 
   function submitForm() {
+    console.log('Submit called');
     const currentStep = steps[current];
     const input = currentStep.querySelector('input');
 
@@ -158,19 +168,19 @@
     progress.style.width = '100%';
   }
 
-  // Handle Enter key (skip textarea)
+  // Handle Enter key
   document.addEventListener('keydown', e => {
-    const activeStep = steps[current];
-    const isTextarea = activeStep.querySelector('textarea');
-    if (e.key === 'Enter' && !e.shiftKey && !isTextarea) {
-      e.preventDefault();
-      if (current === 0) {
-        goToNextStep();
-      } else if (current < steps.length - 2) {
-        const isLastInputStep = current === steps.length - 3;
-        if (isLastInputStep) {
+    if (e.key === 'Enter' && !e.shiftKey) {
+      const activeStep = steps[current];
+      const isTextarea = activeStep.querySelector('textarea');
+      
+      if (!isTextarea) {
+        e.preventDefault();
+        if (current === 0) {
+          startForm();
+        } else if (current === steps.length - 2) {
           submitForm();
-        } else {
+        } else if (current < steps.length - 2) {
           nextStep();
         }
       }
