--- a/index.html
+++ b/index.html
@@ -324,11 +324,57 @@
       </div>
     </section>
 
-    <!-- Moral Call Section -->
+<!-- Moral Call Section -->
     <section class="mt-16">
       <div class="gradient-cta rounded-3xl p-10 md:p-14 shadow-2xl text-white relative overflow-hidden">
         <div class="absolute top-0 right-0 w-96 h-96 bg-gold-light/20 rounded-full blur-3xl"></div>
         <div class="relative z-10">
           <h3 class="text-3xl md:text-4xl font-black mb-6">A Direct Choice</h3>
           <p class="text-lg md:text-xl leading-relaxed max-w-4xl">
-            <strong class="font-black">AI will reach African classrooms — with or without teachers.</strong> Our choice now is whether it arrives shaped by our values, languages and judgement, or by systems that don't understand us. Join <strong class="font-black text-gold-light">TichaAfrica</strong> to ensure AI prot
+            <strong class="font-black">AI will reach African classrooms — with or without teachers.</strong> Our choice now is whether it arrives shaped by our values, languages and judgement, or by systems that don't understand us. Join <strong class="font-black text-gold-light">TichaAfrica</strong> to ensure AI protects our children and strengthens our teaching.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials Carousel -->
+    <section class="mt-20">
+      <h2 class="text-3xl md:text-4xl font-black text-center mb-12 text-slate-900">
+        Voices From The Classroom
+      </h2>
+
+      <div id="carousel" class="relative bg-white rounded-3xl p-10 md:p-14 shadow-2xl max-w-4xl mx-auto">
+        <div class="overflow-hidden" style="min-height: 280px;">
+          <!-- Slide 1 -->
+          <div class="slide transition-all duration-700 ease-in-out opacity-100 transform translate-y-0 scale-100">
+            <div class="flex flex-col items-center text-center">
+              <img src="images/teacher1.jpg" alt="Mary, Kenya" class="w-24 h-24 rounded-full object-cover shadow-xl border-4 border-gold-light" />
+              <blockquote class="mt-6 text-xl md:text-2xl italic text-slate-700 leading-relaxed max-w-2xl">
+                "<strong class="font-bold text-accent">TichaAfrica</strong> is the first programme that asked me how AI should fit my classroom. Now we design — not just consume."
+              </blockquote>
+              <cite class="mt-6 text-lg font-bold text-accent">Mary A. — Kenya</cite>
+            </div>
+          </div>
+
+          <!-- Slide 2 -->
+          <div class="slide transition-all duration-700 ease-in-out opacity-0 transform translate-y-4 scale-95 absolute inset-0 pointer-events-none">
+            <div class="flex flex-col items-center text-center p-10">
+              <img src="images/teacher2.jpg" alt="Adebola, Nigeria" class="w-24 h-24 rounded-full object-cover shadow-xl border-4 border-gold-light" />
+              <blockquote class="mt-6 text-xl md:text-2xl italic text-slate-700 leading-relaxed max-w-2xl">
+                "I learned simple tools that worked on my phone. It made a difference in my class the next week."
+              </blockquote>
+              <cite class="mt-6 text-lg font-bold text-accent">Adebola O. — Nigeria</cite>
+            </div>
+          </div>
+
+          <!-- Slide 3 -->
+          <div class="slide transition-all duration-700 ease-in-out opacity-0 transform translate-y-4 scale-95 absolute inset-0 pointer-events-none">
+            <div class="flex flex-col items-center text-center p-10">
+              <img src="images/teacher3.jpg" alt="Chantal, Rwanda" class="w-24 h-24 rounded-full object-cover shadow-xl border-4 border-gold-light" />
+              <blockquote class="mt-6 text-xl md:text-2xl italic text-slate-700 leading-relaxed max-w-2xl">
+                "Finally, we have a community where teachers lead policy and practice — and that changes everything."
+              </blockquote>
+              <cite class="mt-6 text-lg font-bold text-accent">Chantal N. — Rwanda</cite>
+            </div>
+          </div>
+          
