--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <span class="text-lg">✦</span>
               </div>
               <p class="text-lg text-slate-700 leading-relaxed">
-                <strong class="text-slate-900">Policy-ready resources</strong> aligned with <strong class="text-accent">UNESCO AI CFT</strong> & <strong class="text-accent">AU Continental AI Strategy</strong>
+                <strong class="text-slate-900">Policy-ready resources</strong> aligned with <strong class="text-accent">UNESCO AI Competency Framework for Teachers</strong> & <strong class="text-accent">AU Continental AI Strategy</strong>
               </p>
             </li>
           </ul>
@@ -234,7 +234,7 @@
             <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
           </a>
           
-          <a href="#" class="group inline-flex items-center gap-3 bg-accent hover:bg-accent-dark text-white font-bold px-8 py-4 rounded-full shadow-xl hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 text-lg">
+          <a href="Share-your-journey.html" class="group inline-flex items-center gap-3 bg-accent hover:bg-accent-dark text-white font-bold px-8 py-4 rounded-full shadow-xl hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 text-lg">
             <span>Share Your Journey — 2 min</span>
             <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
           </a>
