--- a/Share-your-journey.html
+++ b/Share-your-journey.html
@@ -436,7 +436,7 @@
 
   <div class="form-header">
     <h1>Your Teaching Journey Matters</h1>
-    <p>We're not here to extract data — we're here to witness your story. Every classroom in Africa has its own heartbeat, its own struggles, its own brilliance. We want to understand yours.</p>
+    <p>Here is your chance to lead and we're here to witness your story. Every classroom in Africa has its own heartbeat, its own struggles, its own brilliance. We want to understand yours.</p>
   </div>
 
   <div class="form-container">
@@ -502,7 +502,7 @@
       <span class="icon">💝</span>
       <h2>Why did you become a teacher?</h2>
       <p class="question-text">Take us back to the beginning. What called you to this work?</p>
-      <textarea id="whyTeach" placeholder="Was it a teacher who believed in you? A moment when you realized you could make a difference? A need in your community? Share what brought you here..."></textarea>
+      <textarea id="whyTeach" placeholder="Was it a teacher who believed in you? A moment when you realised you could make a difference? A need in your community? Share what brought you here..."></textarea>
       <div class="word-count" id="counter2">0 words</div>
       <button class="btn-next" onclick="nextStep()">Continue →</button>
     </div>
