--- a/Share-your-journey.html
+++ b/Share-your-journey.html
@@ -448,7 +448,7 @@
     <!-- Q1: Introduction -->
     <div class="step active" data-step="1">
       <span class="icon">🌍💫</span>
-      <h2>Welcome to a conversation, not a survey</h2>
+      <h2>Welcome to the conversation, that'll shape how Africa learns in the digital age</h2>
       <p class="question-text">This will take about 6-8 minutes. There are no right or wrong answers — only your truth. Some questions are easy, others ask you to dig deeper. Take your time.</p>
       <div class="context-box">
         <strong>Why this matters:</strong>
