--- a/Share-your-journey.html
+++ b/Share-your-journey.html
@@ -435,7 +435,7 @@
   </div>
 
   <div class="form-header">
-    <h1>Your Teaching Journey Matters</h1>
+    <h1>From Teacher to Leader!</h1>
     <p>Here is your chance to lead and we're here to witness your story. Every classroom in Africa has its own heartbeat, its own struggles, its own brilliance. We want to understand yours.</p>
   </div>
 
