--- a/Share-your-journey.html
+++ b/Share-your-journey.html
@@ -436,7 +436,7 @@
 
   <div class="form-header">
     <h1>From Teacher to Leader!</h1>
-    <p>Here is your chance to lead and we're here to witness your story. Every classroom in Africa has its own heartbeat, its own struggles, its own brilliance. We want to understand yours.</p>
+    <p>Here's your chance to lead and we're here to witness your story. Every classroom in Africa has its own heartbeat, its own struggles, its own brilliance. We want to understand yours.</p>
   </div>
 
   <div class="form-container">
