--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
       <div class="gradient-cta rounded-3xl p-10 md:p-14 shadow-2xl text-white relative overflow-hidden">
         <div class="absolute top-0 right-0 w-96 h-96 bg-gold-light/20 rounded-full blur-3xl"></div>
         <div class="relative z-10">
-          <h3 class="text-3xl md:text-4xl font-black mb-6">A Direct Choice</h3>
+          <h3 class="text-3xl md:text-4xl font-black mb-6">The Choice Before Us</h3>
           <p class="text-lg md:text-xl leading-relaxed max-w-4xl">
             <strong class="font-black">AI will reach African classrooms — with or without teachers.</strong> Our choice now is whether it arrives shaped by our values, languages and judgement, or by systems that don't understand us. Join <strong class="font-black text-gold-light">TichaAfrica</strong> to ensure AI protects our children and strengthens our teaching.
           </p>
@@ -407,7 +407,7 @@
         
         <div class="relative z-10 text-center max-w-4xl mx-auto">
           <h2 class="text-4xl md:text-5xl lg:text-6xl font-black mb-6 leading-tight">
-            Join the Movement — Not Just a Training
+            Join the Movement — Transforming Learning Across the Continent
           </h2>
           
           <p class="text-xl md:text-2xl mb-8 leading-relaxed font-medium">
