--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           </a>
           
           <a href="Share-your-journey.html" class="group inline-flex items-center gap-3 bg-accent hover:bg-accent-dark text-white font-bold px-8 py-4 rounded-full shadow-xl hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 text-lg">
-            <span>Share Your Journey — 2 min</span>
+            <span>Become a Leader — 2 min</span>
             <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
           </a>
         </div>
@@ -274,7 +274,7 @@
     <!-- Benefits Grid -->
     <section class="mt-16">
       <h2 class="text-3xl md:text-4xl font-black text-center mb-12 text-slate-900">
-        What This Means For You
+        What This Means For Every African Teacher
       </h2>
       
       <div class="grid md:grid-cols-2 gap-8">
@@ -283,7 +283,7 @@
           <div class="w-16 h-16 bg-accent rounded-2xl flex items-center justify-center mb-6 shadow-lg">
             <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"/></svg>
           </div>
-          <h3 class="text-2xl font-black text-slate-900 mb-4">For Your Classroom</h3>
+          <h3 class="text-2xl font-black text-slate-900 mb-4">For Our Classrooms</h3>
           <ul class="space-y-4">
             <li class="flex items-start gap-3">
               <svg class="w-6 h-6 text-accent flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/></svg>
@@ -305,7 +305,7 @@
           <div class="w-16 h-16 bg-gradient-gold rounded-2xl flex items-center justify-center mb-6 shadow-lg">
             <svg class="w-8 h-8 text-slate-900" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"/></svg>
           </div>
-          <h3 class="text-2xl font-black text-slate-900 mb-4">For Your Career</h3>
+          <h3 class="text-2xl font-black text-slate-900 mb-4">For Our Growth</h3>
           <ul class="space-y-4">
             <li class="flex items-start gap-3">
               <svg class="w-6 h-6 text-gold flex-shrink-0 mt-0.5" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/></svg>
@@ -329,7 +329,7 @@
       <div class="gradient-cta rounded-3xl p-10 md:p-14 shadow-2xl text-white relative overflow-hidden">
         <div class="absolute top-0 right-0 w-96 h-96 bg-gold-light/20 rounded-full blur-3xl"></div>
         <div class="relative z-10">
-          <h3 class="text-3xl md:text-4xl font-black mb-6">The Choice Before Us</h3>
+          <h3 class="text-3xl md:text-4xl font-black mb-6">The Choices Before Us</h3>
           <p class="text-lg md:text-xl leading-relaxed max-w-4xl">
             <strong class="font-black">AI will reach African classrooms — with or without teachers.</strong> Our choice now is whether it arrives shaped by our values, languages and judgement, or by systems that don't understand us. Join <strong class="font-black text-gold-light">TichaAfrica</strong> to ensure AI protects our children and strengthens our teaching.
           </p>
