--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         
         <div class="relative z-10 text-center max-w-4xl mx-auto">
           <h2 class="text-4xl md:text-5xl lg:text-6xl font-black mb-6 leading-tight">
-            Join the Movement — Transforming Learning Across the Continent
+            Join the Movement Transforming Learning Across the Continent
           </h2>
           
           <p class="text-xl md:text-2xl mb-8 leading-relaxed font-medium">
