--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <span class="text-lg">✦</span>
               </div>
               <p class="text-lg text-slate-700 leading-relaxed">
-                <strong class="text-slate-900">Teacher-co-created AI training</strong> — built from African classrooms, languages and stories
+                <strong class="text-slate-900">Teacher-co-created AI Curriculum & training</strong> — built from African classrooms, languages and stories
               </p>
             </li>
             
