--- a/Share-your-journey.html
+++ b/Share-your-journey.html
@@ -459,7 +459,7 @@ Take your time.</p>
         We're building AI tools for African education.
 But before we build anything, we need to understand the real experiences of teachers like you — the moments of joy, the weight of challenges, the dreams that keep you going.
 </div>
-      <button class="btn-next" onclick="startForm()">I'm ready to share my journey →</button>
+      <button class="btn-next" id="start-button">I'm ready to share my journey →</button>
     </div>
 
     <div class="step" data-step="2">
@@ -663,4 +663,5 @@ type="radio" id="ai2" name="aiAware" value="yes-curious">
           <label for="ai4">I've heard of it but don't really understand it</label>
         </div>
         <div class="option">
-          <input type="radio" id="ai5" name="aiAware" value="no"
+          <input type="radio" id="ai5" name="aiAware" value="no">
+  
